fixed align for contact

--- a/pages/components/contactcard/components/contactform/ContactForm.scss
+++ b/pages/components/contactcard/components/contactform/ContactForm.scss
@@ -8,7 +8,6 @@ textarea:focus, input:focus, div:focus{
 	padding-bottom:200px;
 	background-image:url("/static/bgimg6.jpg");
 	background-size:cover;
-	transform: translateX(15px);
 }
 
 .contact-form-align {
